bugfix object-jit, wrong password, Jumping through site part #1

--- a/client/src/components/AboutUs/style.scss
+++ b/client/src/components/AboutUs/style.scss
@@ -8,4 +8,8 @@
     transform: scale(1.05);
     transition: 1s;
   }
+
+  .photoTeam {
+    object-fit: cover;
+  }
 }
